--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@
 @import './components/my-navbar.scss';
 @import './components/header.scss';
 @import './components/about-us.scss';
-@import './components/our-service.scss';
+@import './components/skill-and-experience.scss';
 @import './components/fake-footer.scss';
 @import './components/footer.scss';
 @import './components/loading-spinner.scss';
