Rename all scss files

--- a/src/styles/components/_skill-and-experience.scss
+++ b/src/styles/components/_skill-and-experience.scss
@@ -41,6 +41,12 @@
     .our-skill-container {
         width: 100%;
     }
+
+
+    .our-skill-block {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
 }
 
 
