--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,14 +3,14 @@
 
 @import './_base.scss';
 
-@import './components/my-navbar.scss';
-@import './components/header.scss';
-@import './components/about-us.scss';
-@import './components/skill-and-experience.scss';
-@import './components/fake-footer.scss';
-@import './components/footer.scss';
-@import './components/loading-spinner.scss';
-@import './components/slogan.scss';
+@import './components/_my-navbar.scss';
+@import './components/_header.scss';
+@import './components/_about-us.scss';
+@import './components/_skill-and-experience.scss';
+@import './components/_fake-footer.scss';
+@import './components/_footer.scss';
+@import './components/_loading-spinner.scss';
+@import './components/_slogan.scss';
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat|Raleway|Open+Sans:400,700");
 
