--- a/src/styles/components/_skill-and-experience.scss
+++ b/src/styles/components/_skill-and-experience.scss
@@ -44,10 +44,17 @@
 
 
     .our-skill-block {
-        margin-top: 20px;
-        margin-bottom: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .col-with-gap{
+        margin-bottom: 15px;
+    }
+
+    .skill-card {
+        background-color: rgba(128, 128, 128, 0.4)
     }
 }
-
 
 
